--- a/three/report/bibliography.bib
+++ b/three/report/bibliography.bib
@@ -5,44 +5,14 @@
   publisher={MIT press}
 }
 
-%upper confidence
-@inproceedings{auer2009near,
-  title={Near-optimal regret bounds for reinforcement learning},
-  author={Auer, Peter and Jaksch, Thomas and Ortner, Ronald},
-  booktitle={Advances in neural information processing systems},
-  pages={89--96},
-  year={2009}
-}
 
-%VMAX
-
-@InProceedings{rao:aamas12,
-  author        = "Karun Rao and Shimon Whiteson",
-  title         = "{V-MAX}: Tempered Optimism for Better {PAC} Reinforcement Learning",
-  booktitle     = "AAMAS 2012: Proceedings of the Eleventh International
-                  Joint Conference on Autonomous Agents and
-                  Multi-Agent Systems",
-   pages = "375-382",                     
-  month = "June",    
-  year          = 2012,
-}
-
-
-%BAYES
-@inproceedings{dearden1998bayesian,
-  title={Bayesian Q-learning},
-  author={Dearden, Richard and Friedman, Nir and Russell, Stuart},
-  booktitle={AAAI/IAAI},
-  pages={761--768},
-  year={1998}
-}
-
-
-@inproceedings{auer2009near,
-  title={Near-optimal regret bounds for reinforcement learning},
-  author={Auer, Peter and Jaksch, Thomas and Ortner, Ronald},
-  booktitle={Advances in neural information processing systems},
-  pages={89--96},
-  year={2009}
+% Minimax
+@INPROCEEDINGS{Littman94markovgames,
+    author = {Michael L. Littman},
+    title = {Markov games as a framework for multi-agent reinforcement learning},
+    booktitle = {IN PROCEEDINGS OF THE ELEVENTH INTERNATIONAL CONFERENCE ON MACHINE LEARNING},
+    year = {1994},
+    pages = {157--163},
+    publisher = {Morgan Kaufmann}
 }
 
