--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -78,14 +78,14 @@ Repeat (for each episode):\\
 In minimax Q-learning, each agent uses update rule \ref{ref:minimaxrule}
 \begin{mdframed}
 \begin{align}
-Q(s,a,o) := (1-\alpha) Q(s,a,o) + \alpha * (R + \gamma V(s'))
+Q(s,a,o) \leftarrow (1-\alpha) Q(s,a,o) + \alpha * (R + \gamma V(s'))
 \end{align}
 \label{ref:minimaxrule}
 \end{mdframed}
 Then, linear programming is used to find a policy so that
 \begin{mdframed}
 \begin{align}
-\pi(s,) := \underset{\pi'(s,)}{\text{argmax }} \left\{ \underset{o'}{\text{min}} \left\{ \sum_{a'}  \left\{ \pi(s,a') \times Q(s,a',o') \right\} \right\} \right\}
+\pi(s,) \leftarrow \underset{\pi'(s,)}{\text{argmax }} \left\{ \underset{o'}{\text{min}} \left\{ \sum_{a'}  \left\{ \pi(s,a') \times Q(s,a',o') \right\} \right\} \right\}
 \end{align}
 \end{mdframed}
 
@@ -94,8 +94,16 @@ Then, linear programming is used to find a policy so that
 \begin{center} 
 \begin{mdframed}
 \begin{algorithm}[H]
-Initialize s, a and  o \\
-Q(s, a, o) $\leftarrow$ 1
+Initialize Q(s,a) arbitrarily \\
+Repeat (for each episode):\\
+\tab Initialize s \\
+\tab Repeat (for each step of episode):\\
+\dtab Choose a from s' using policy derived from Q (e.g., $\epsilon$-greedy)\\
+\dtab Take action a, observe reward R, s' and opponent's action o\\
+\dtab Q(s,a,o) $\leftarrow$ (1-$\alpha$) Q(s,a,o) + $\alpha$ * (R + $\gamma$ V(s'))  \\
+\dtab $\pi(s,) \leftarrow \underset{\pi'(s,)}{\text{argmax }} \left\{ \underset{o'}{\text{min}} \left\{ \sum_{a'}  \left\{ \pi(s,a') \times Q(s,a',o') \right\} \right\} \right\}$ \\
+\dtab $ V(s) \leftarrow \underset{o'}{\text{min}} \left\{ \sum_{a'}  \left\{ \pi(s,a') \times Q(s,a',o') \right\} \right\}  $ \\
+\dtab $\alpha \leftarrow \alpha * decay$
 \end{algorithm}
 \end{mdframed}
 \captionof{figure}{Minimax-Q learning\cite{Littman94markovgames}}
