added seperate file for friend or foe to work on it without merge errors

--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -139,9 +139,8 @@ Let alpha := alpha * decay
 
 
 % Update which one is the `other leanring'
-\subsection{Other learning}
-
-
+\subsection{Friend-or-Foe}
+\include{friend_or_foe}
 
 \section{Implementation}
 
