input instead of include

--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -140,7 +140,7 @@ Let alpha := alpha * decay
 
 % Update which one is the `other leanring'
 \subsection{Friend-or-Foe}
-\include{friend_or_foe}
+\input{friend_or_foe}
 
 \section{Implementation}
 
