added state space encoding part

--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -145,7 +145,7 @@ Let alpha := alpha * decay
 \section{Implementation}
 
 \subsection{New state space}
-
+\input{state_space_encoding}
 
 \subsection{Files}
 
