--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -34,6 +34,7 @@
 \pagebreak
 
 \section{Introduction}
+\input{intro}
 
 
 \pagebreak
@@ -125,7 +126,7 @@ The implementation consists of the following files:
 	\item[Other\_objects] \hfill \\ % uncertain about policy class description
 	This file contains the Policy and Environment classes. The environment of the game as well as the rules are implemented in the Environment class. The Policy class contains the implementation of Q-Learning, Sarsa, $\epsilon$-greedy, softmax action selection and more functions that help in determining and optimizing a policy as well as choosing an action of this policy.
 	\item[Newstate] \hfill \\ 
-	This file contains the Game class as well as a demonstration function. The Game class instantiates the game, initialized the predator and the prey and assigns policies to these. The game is run N times and the result is printed. The demonstration function also performs Q-Learning, Sarsa and Monte Carlo. It also uses $\epsilon$-greedy and softmax action selection. The results are printed in the command line and graphs are used for analysis.
+	This file contains the Game class as well as a demonstration function. The Game class instantiates the game, initialized the predator and the prey and assigns policies to these. The game is run N times and the result is printed. The demonstration function also performs independent Q-learning, minimax Q-learning and independent SARSA. It uses $\epsilon$-greedy action selection. The results are printed in the command line and graphs are used for analysis.
 \end{description}
 
 \pagebreak
@@ -135,11 +136,11 @@ The implementation consists of the following files:
 This section discusses the results of the implementations. In order to display and compare results, graphs are used. The title describes which parameters are analysed and the legend shows which color represents which setting of said parameters.
 
 \subsection{Independent Q-Learning}
+\input{ind_q_analysis}
+\subsection{Minimax Q-learning}
 
-\subsection{Minmax Q-learning}
-
-\subsection{Other Learning}
-
+\subsection{Independent SARSA}
+\input{ind_sarsa_analysis}
 \pagebreak
 
 
