updated q learning analysis and slightly continued sarsa

--- a/three/report/ind_q_analysis.tex
+++ b/three/report/ind_q_analysis.tex
@@ -30,7 +30,7 @@ Now it is interesting to see whether or not the predators catch the prey in a ce
 \textbf{Predators} & 58 & 42 & 76 & 23 \\
 \hline
 \end{tabular}
-\caption{Average \# rounds the predators need to catch the prey}
+\caption{Average \# wins and losses by the predators}
 \end{center}
 \end{table}
 
